# InfoManageSystem

./: CMakeLists.txt  README.md
include/: IInfoManage.h  IInterface.h  InterfaceImpl.h
lib/InfoManageLib/: CMakeLists.txt
lib/InfoManageLib/include/: CStudentDTO.h  IInfoManage.h  InfoManageImpl.h
lib/InfoManageLib/src/: IInfoManage.cpp  InfoManageImpl.cpp
lib/InfoManageLib/test/: InfoManageTest.cpp
src/: CStudentDTO.cpp  IInterface.cpp  InterfaceImpl.cpp  main.cpp
